--- a/www/style.css
+++ b/www/style.css
@@ -1,3 +1,5 @@
+/* Templating for all pages */
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -5,16 +7,18 @@
 }
 
 body {
-    background-color: #4dc23e65;
+    background-color: #f2f2f2;
 }
 
-p, h1, h2, h3, h4, input, a, button, label, span {
+p, h1, h2, h3, h4, input, a, button, label, div {
     color: #000;
     font-family: Arial, Helvetica, sans-serif;
     letter-spacing: .05rem;
     font-weight: 100;
 }
 
+
+/* Navigation styles */
 .header {
     background-color: #fff;
     position: fixed;
@@ -27,52 +31,40 @@ p, h1, h2, h3, h4, input, a, button, label, span {
     padding-right: 15%;
 }
 
-.page-title {
-    cursor: pointer;
-}
-
 #title-p2 {
     color: #209610
 }
 
 .nav-links {
     list-style: none;
+    padding: .5rem 0rem;
 }
 
 .nav-links li {
     display: inline-block;
-    padding: 1rem;
+    padding: .5rem 1rem;
     cursor: pointer;
+    transition: all 0.3s ease 0s;
+    font-size: 1em;
 }
 
 .nav-link:hover {
-    background-color: #29a7182c;
+    background-color: #29a71852;
     border-radius: 10px;
 }
 
-.nav-links, li, a {
-    transition: all 0.3s ease 0s;
-}
-
-
 .nav-links li, a  {
-    font-size: 1em;
     text-decoration: none;
-    padding: .5rem
 }
 
 .active-page {
-    text-decoration: underline;
-    border-radius: 10px;
+    color: red;
 }
 
-.contact button {
+.default-button {
     color: #fff;
     font-size: 1em;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
+    padding: .5rem 1rem;
     border: none;
     border-radius: 25px;
     cursor: pointer;
@@ -80,92 +72,132 @@ p, h1, h2, h3, h4, input, a, button, label, span {
     transition: all 0.3s ease 0s;
 }
 
-.contact:hover {
+.default-button:hover {
     opacity: 85%;
 }
 
-
-/* MAIN */
-
 .main {
-    padding-top: 2rem;
-    padding-left: 15%;
-    padding-right: 15%;
+    padding: 2rem 15% 2rem 15%;
     text-align: center;
-    
+    background-color: #4dc23e65;  
 }
 
+
+/* WELCOME PAGE STYLES */
+
 .arr img {
-    width: 35px;
+    width: 2rem;
 }
 
 .hero{
     background-color: #f2f2f2;
-    padding-top: 5rem;
     display: flex;
     justify-content:space-evenly;
     align-items: center;
-    padding-left: 15%;
-    padding-right: 15%;
-    padding-bottom: 3%;
-}
+    padding: 5rem 15%;
 
-
-
-.hero h2, h3, p {
-    padding-right: .35rem;
-
-}
-
-.hero-subtitle{
-    padding-bottom: 1rem;
-}
-
-.hero-text h3 {
-    color: #29a71898;
 }
 
 .hero-text{
     padding-left: 3rem;
-    width: 75%;
-}
-
-.hero-action{
-    padding-top: 2rem;
+    width: 70%;
 }
 
 .hero-image{
     display: flex;
     justify-content: center;
-    padding-right: 3rem;
+    width: 30%;
 }
 
+.hero .hero-title, .hero-subtitle, .hero-text {
+    padding-right: .35rem;
+}
+
+.hero-subtitle{
+    color: #29a71898;
+}
+
+.hero-para {
+    padding: 1rem 0rem;
+}
+
+.hero-link{
+    margin: 0rem 1rem 0rem 0rem;
+    width: 7rem;
+    text-align: center;
+}
 
 .hero-image img {
     width: 65%;
     align-self: center;
 
-
 }
-
-
-.main-content {
+.welcome-content {
     display: flex;
     padding-top: 2rem;
 }
 
-.main-content div {
+.welcome-content div {
     width: 33.3%;
     padding: 1rem;
 }
 
-.main-content div img {
+.welcome-content div img {
     height: 13rem;
     padding-bottom: .5rem;
 }
 
-footer {
+
+/* SIGN IN/UP PAGE */
+
+.main-signup {
+    padding: 6rem 15% 2rem 15%;
     text-align: center;
-    background-color: rgba(0, 100, 0, 0.301);
+    display: flex;
+    justify-content: center;
 }
 
+.signup-content{
+
+    height: 30rem;
+    width: 70%;
+    border: 1px;
+    background-color: rgba(0, 0, 0, 0.082);
+    border-radius: 10px;
+}
+
+/* DASHOBOARD STYLE */
+
+.main-dashboard {
+    padding: 6rem 15% 2rem 15%;
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+}
+
+.main-dashboard div {
+    margin: 0rem 1rem;
+
+}
+
+.dashboard-side-panel{
+    flex: 1;
+    width: 100%;
+    border: 1px;
+    background-color: rgba(0, 0, 0, 0.082);
+    border-radius: 10px;
+    border: 1px solid black;
+}
+
+.dashboard-main-panel{
+    flex: 3;
+
+
+    height: 30rem;
+    width: 100%;
+    border: 1px;
+    background-color: rgba(0, 0, 0, 0.082);
+    border-radius: 10px;
+    border: 1px solid black;
+}
