--- a/www/style.css
+++ b/www/style.css
@@ -10,7 +10,7 @@ body {
     background-color: #f2f2f2;
 }
 
-p, h1, h2, h3, h4, input, a, button, label, div {
+p, h1, h2, h3, h4, input, a, button, label, div, li, ul, textarea {
     color: #000;
     font-family: Arial, Helvetica, sans-serif;
     letter-spacing: .05rem;
@@ -31,7 +31,7 @@ p, h1, h2, h3, h4, input, a, button, label, div {
 }
 
 #title-p2 {
-    color: #209610
+    color: #29a71898
 }
 
 .nav-links {
@@ -43,7 +43,6 @@ p, h1, h2, h3, h4, input, a, button, label, div {
     display: inline-block;
     padding: .5rem 1rem;
     cursor: pointer;
-    transition: all 0.3s ease 0s;
     font-size: 1em;
 }
 
@@ -57,29 +56,40 @@ p, h1, h2, h3, h4, input, a, button, label, div {
 }
 
 .active-page {
-    color: red;
+    opacity: 85%;
+    background-color: #29a71898;
+    color: #fff;
+    border-radius: 10px;
 }
 
 .default-button {
-    color: #fff;
+    color: #29a71898;
     font-size: 1em;
     padding: .5rem 1rem;
     border: none;
     border-radius: 25px;
     cursor: pointer;
-    background-color: #29a71898;
+    border: solid 2px #29a71898;
     transition: all 0.3s ease 0s;
     width: fit-content;
+    font-weight: bold;
+
 }
 
 .default-button:hover {
     opacity: 85%;
+    background-color: #29a71898;
+    color: #fff;
 }
 
 .main {
     padding: 2rem 15% 2rem 15%;
     text-align: center;
     background-color: #4dc23e65;
+}
+
+.content-title {
+    text-align: center;
 }
 
 
@@ -134,11 +144,13 @@ p, h1, h2, h3, h4, input, a, button, label, div {
 }
 .welcome-content {
     display: flex;
+    flex-wrap: wrap;
     padding-top: 2rem;
+    justify-content: space-around;
 }
 
 .welcome-content div {
-    width: 33.3%;
+    width: 30%;
     padding: 1rem;
 }
 
@@ -150,19 +162,14 @@ p, h1, h2, h3, h4, input, a, button, label, div {
 
 /* SIGN IN/UP PAGE */
 
-.main-signup {
-    padding: 6rem 15% 2rem 15%;
-    text-align: center;
-    display: flex;
-    justify-content: center;
+.main-subpage {
+    padding: 5rem 15% 2rem 15%;
 }
 
-.signup-content{
-
-    height: 30rem;
-    width: 70%;
+.subpage-content{
+    width: 100%;
     border: 1px;
-    background-color: rgba(0, 0, 0, 0.082);
+    background-color: #fff;
     border-radius: 10px;
 }
 
@@ -195,7 +202,7 @@ p, h1, h2, h3, h4, input, a, button, label, div {
 
 .dash-icon {
     background-color: #fff;
-    height: 12rem;
+    min-height: 12rem;
     width: 100%;
     margin: .3rem;
     border-radius: 10px;
@@ -248,14 +255,62 @@ hr {
 }
 
 
+/* CONTACT PAGE */
+
+.contact-us{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap-reverse;
+
+}
+
+.contact-us div {
+    margin: 1rem;
+    width: 45%;
+}
+
+.contact-form form ul li {
+    text-decoration: none;
+    list-style: none;
+    padding: .5rem;
+}
+
+.contact-form form ul li input {
+    border-radius: 10px;
+    height: 2rem;
+    width: 55%;
+
+}
+
+.contact-form form ul li textarea {
+    border-radius: 10px;
+    height: 10rem;
+    max-height: 10rem;
+    max-width: 95%;
+    width: 95%;
+
+}
+
+.contact-side-text {
+    text-align: center;
+}
 
 
 
 
-@media(max-width:1000px) {
+@media(max-width:1100px) {
     .main {
         padding-left: 3%;
         padding-right: 3%;
+    }
+
+    .main-subpage {
+        padding-left: 3%;
+        padding-right: 3%;
+    }
+
+    .contact-us div {
+        width: 90%;
     }
 
     .header {
@@ -272,5 +327,23 @@ hr {
     .main-dashboard {
         padding-left: 3%;
         padding-right: 3%;
+    }
+    
+    .welcome-content div {
+        width: 90%;
+        padding: 1rem;
+    }
+
+    .welcome-content {
+    display: flex;
+    flex-wrap: wrap;
+    padding-top: 2rem;
+    justify-content: space-around;
+}
+    
+    .welcome-content div img {
+        height: 7rem;
+        padding: .5rem;
+        float: left;
     }
 }
