changes to budgetreport page

--- a/www/style.css
+++ b/www/style.css
@@ -371,8 +371,45 @@ hr {
     margin: 0% 25% ;
 }
 
+/* BUDGET REPORT */
 
+.budget-report {
+    background-color: #fff;
+    border-radius: 10px;
+    margin: 1rem;
+    padding: 1rem;
+    text-align: center;
+}
 
+.month-option {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.month-option div {
+    margin: .2rem 1rem;
+    width: 20%;
+}
+
+.month-option:hover {
+    
+}
+.month {
+    padding: .5rem;
+    border: 1px solid;
+    border-radius: 90px;
+
+}
+
+.month:hover {
+    cursor: pointer;
+}
+
+.active-month {
+    background-color: 29a71852;
+
+}
 
 
 
