--- a/www/style.css
+++ b/www/style.css
@@ -129,6 +129,7 @@ p, h1, h2, h3, h4, input, a, button, label, div, li, ul, textarea {
 
 .hero-para {
     padding: 1rem 0rem;
+    font-size: large;
 }
 
 .hero-link{
@@ -237,6 +238,11 @@ p, h1, h2, h3, h4, input, a, button, label, div, li, ul, textarea {
     padding: 1rem;
     margin-top: 5.5rem;
     text-align: center;
+}
+
+.panel-content div {
+    width: 100%;
+    margin-top: 6rem;
 }
 
 .panel-content {
@@ -392,9 +398,7 @@ hr {
     width: 20%;
 }
 
-.month-option:hover {
 
-}
 .month {
     padding: .5rem;
     border: 1px solid;
